--- a/Speech-2-Text/templates/speech_to_text_test.html
+++ b/Speech-2-Text/templates/speech_to_text_test.html
@@ -20,6 +20,9 @@
         const resultParagraph = document.getElementById("result");
         const status_info = document.getElementById("status_infos");
 
+        stopButton.disabled = true;
+        startButton.disabled = false;
+
         startButton.addEventListener("click", () => {
             startButton.disabled = true;
             stopButton.disabled = false;
@@ -39,10 +42,18 @@
             status_info.textContent = status_infos_received;
         }) 
 
+        socket.on('error_recording', data => {
+            const status_error_received = data.status;
+            status_info.textContent = status_error_received;
+            stopButton.disabled = true;
+            startButton.disabled = false;
+        })
+
         socket.on('recognized_text', data => {
             const recognizedText = data.text;
             resultParagraph.textContent += ' ' + recognizedText;
             startButton.disabled = false;
+            stopButton.disabled = true;
         });
     </script>
 </body>
