--- a/TravelOrderResolver-Client/src/app/app.component.html
+++ b/TravelOrderResolver-Client/src/app/app.component.html
@@ -5,9 +5,11 @@
     <nb-chat title="Conversational Travel Order" size="large" status="info">
       
       <nb-chat-message *ngFor="let msg of messages"
+                        [type]="msg.type"
                         [message]="msg.text"
                         [reply]="msg.reply"
                         [sender]="msg.user.name"
+                        [files]="msg.file"
                         [date]="msg.date"
                         [avatar]="msg.user.avatar">
       </nb-chat-message>
